Linking and seeing if a box works

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<link rel="stylesheet" href="stylesheet.css">
+
 <a href="https://www.linkedin.com/in/erkamisbilir" id="linkedin-link" >Click here to visit my LinkedIn page</a>
+
+<div class="box">
+    <h2>Here is some info about my academic history</h2>
+    <p>I graduated from Clements High School in 2021, and I'm currently majoring in ECE at UT Austin</p>
+</div>
