--- a/index.html
+++ b/index.html
@@ -6,3 +6,13 @@
     <h2>Here is some info about my academic history</h2>
     <p>I graduated from Clements High School in 2021, and I'm currently majoring in ECE at UT Austin</p>
 </div>
+
+
+<div class="box">
+    <h2>I have listed 3 of of my hobbies below!</h2>
+    <ul>
+        <li>Soccer</li>
+        <li>Video Games</li>
+        <li>Chess</li>
+    </ul>
+</div>
