--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+    <meta name="author" content="Erkam Isbilir">
+    <meta name="description" content="This is a very basic webpage about me">
+
 <link rel="stylesheet" href="stylesheet.css">
 
 <a href="https://www.linkedin.com/in/erkamisbilir" id="linkedin-link" >Click here to visit my LinkedIn page</a>
